client/src/pages/Blog/style.css
/* ... */
.card-0 > a > img {
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
}
.card-1 {
  grid-column-start: 5;
  grid-column-end: 7;
  grid-row-start: 1;
  grid-row-end: 5;
}
.card-2 {
  grid-column-start: 7;
  grid-column-end: 9;
  grid-row-start: 1;
  grid-row-end: 5;
}
.card-2 > a > img {
  border-top-right-radius: 15px;
}
.card-3 {
  grid-column-start: 5;
  grid-column-end: 7;
  grid-row-start: 5;
  grid-row-end: 9;
}
.card-4 {
  grid-column-start: 7;
  grid-column-end: 9;
  grid-row-start: 5;
  grid-row-end: 9;
}
.card-4 > a > img {
  border-bottom-right-radius: 15px;
}

.blog-card {
  position: relative;
}

@media (max-width: 997px) {

    .blog-page-content {
        margin:15vh auto;
    }
    .text-date-container {
        display: flex;
        align-items: center;
        width: 100%;
        padding: 5px 15px;
    }
    .blog-date-box {
        margin-right:15px;
        width:200px;
    }
.blog-date-box > .btn {
    padding: .375rem .75rem;
}
    .blogbox {
 
        margin-top: -50px;
     
    }

    .grid{
        height:800px;
        width:90%;
        margin:0px auto;
        display:grid;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: repeat(12, 5vh);
        grid-gap: 15px;
    }
    
    .card-0{
        grid-column-start: 1;
        grid-column-end: 13;
        grid-row-start: 1;
        grid-row-end: 6;
    }
    .card-0 > a > img{
        border-radius:25px;
    }
    .card-1{
        grid-column-start: 1;
        grid-column-end: 7;
        grid-row-start: 6;
        grid-row-end: 9;
    }
    .card-1 > a > img{
        border-radius:25px;
    }
    .card-2{
            grid-column-start: 7;
            grid-column-end: 13;
            grid-row-start: 6;
            grid-row-end: 9;
        } 
        .card-2 > a > img{
            border-radius:15px;
        }
    .card-3{
            grid-column-start: 1;
            grid-column-end: 7;
            grid-row-start: 9;
            grid-row-end: 12;
        } 
        .card-3 > a > img{
            border-radius:15px;
        }
    .card-4{
            grid-column-start: 7;
            grid-column-end: 13;
            grid-row-start: 9;
            grid-row-end: 12;
        } 
        .card-4 > a > img{
            border-radius:15px;
        }

        .button-wrapper {
            flex-wrap:wrap;
        }

        .button-wrapper > .btn {
            margin:15px;
        }
        .blog-text-box {
            font-size: .85rem;
        }
        .blog-date-box > button {
            font-size: 10px;
        }
}

